# Strikfin-ATT

./: .gitignore  impprompt.md
backend/: .env.example  .gitignore  acc.py  alembic.ini  app.py  generate_fyers_token.py  pyproject.toml  requirements.txt  spotdiag2.py
backend/alembic/: env.py
backend/alembic/versions/: 20260705_0826-5a2843c19f71_baseline_current_schema.py  20260705_0855-debc9e15fc9b_instrument_master_rich_columns.py  20260705_0938-a2aa386db8ed_broker_connections_table.py  20260705_1354-359a6ec8421d_multi_tenant_saas_tables.py  20260705_2007-20afea002e7e_user_profile_fields_preferences.py  20260717_1600-b7c41f9a2d05_snapshot_lot_size_option_expiry_rule.py
backend/app/: main.py
backend/app/brokers/: __init__.py  base.py  connections.py  registry.py
backend/app/core/: banner.py  cache.py  config.py  deps.py  exceptions.py  rate_limit.py  security.py  token_store.py
backend/app/db/: models.py  session.py
backend/app/domain/: schemas.py
backend/app/engines/: options_math.py  outcome.py  regime.py  short_covering.py  synthesizer.py
backend/app/ingestion/: scheduler.py
backend/app/instruments/: __init__.py  ref.py  seed.py  service.py  snapshot.py
backend/app/market_data/: __init__.py  expiry.py  service.py
backend/app/services/: auth_service.py  market_history.py  options_lab_service.py  options_service.py  preferences_service.py  regime_service.py  signal_outcome_service.py  signal_service.py
backend/app/tenancy/: __init__.py  api_key_service.py  context.py  org_service.py
backend/app/websocket/: __init__.py  channels.py  manager.py  (+3 more)
(+146 files in other folders)
